# boids-k8s-events

./: .devcontainer.json  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  boids-k8s-events.py  pyproject.toml
.github/workflows/: workflow.yml
src/boids/k8s_events/: __init__.py  kubectl.py
test/: conftest.py  test_kubectl.py  test_threads.py
