[tool.poetry]
name = "boids-k8s-events"
version = "1.2.0"
description = "Interacts with the k8s cluster based on Boids events"
authors = ["Kerry Johnson <kerry.t.johnson@gmail.com>"]
readme = "README.md"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version = "1.2.0"
version_files = [
    "pyproject.toml:^version"
]

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"
backoff = "^2.2.1"
mergedeep = "^1.3.4"
connexion = "^2.14.2"
nats-py = "^2.4.0"
elasticsearch = "^8.10.1"
colorlog = "^6.7.0"
boids-utils = "1.1.2"
boids-api = "1.0.3"

[tool.poetry.group.dev.dependencies]
commitizen = "^2.40.0"
pylint = "^3.0.1"
pre-commit = "^3.5.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-timeout = "^2.1.0"
pytest-asyncio = "^0.21.1"
testcontainers = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
